--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,8 @@
+
+<script type="text/javascript">
+  window.assets = {
+    logo: "<%= image_path("logo.png") %>",
+    welcomeVideo: "<%= asset_path("/media/welcome_video.mp4") %>"
+  }
+</script>
 <main id="root"></main>
