--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -6,3 +6,8 @@
   }
 </script>
 <main id="root"></main>
+
+
+<!--
+<iframe src="https://player.vimeo.com/video/146599806?title=0&byline=0&portrait=0" width="640" height="268" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/146599806">SCIENCE &amp; NATURE - Teaser Trailer</a> from <a href="https://vimeo.com/chromosphere">Chromosphere</a> on <a href="https://vimeo.com">Vimeo</a>.</p> -->
