Add video background to the splash page

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -7,7 +7,7 @@ header {
   font-family: serif;
   display: flex;
   justify-content: space-between;
-
+  opacity: 0.8;
   flex-direction: row;
   align-items: center;
 }
