--- a/app/assets/stylesheets/components/welcome.scss
+++ b/app/assets/stylesheets/components/welcome.scss
@@ -1,4 +1,19 @@
 .welcome-video {
   width: 100%;
   height: auto;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
+
 }
+
+// display: flex;
+// width: 100%;
+// min-height: 320px;
+// max-height: 450px;
+// background-size: cover;
+// background-position: center center;
