Completed front end auth part, created tables for organizers and members

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
  @import "css_reset.scss";
 
  // Core
- // @import "base/colors.scss";
+ @import "base/colors.scss";
  // @import "base/fonts.scss";
  // @import "base/layout.scss";
 
