--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,3 +1,9 @@
+<script type="text/javascript">
+  <% if current_user %>
+    window.currentUser = <%= render("api/users/user.json.jbuilder",
+    user: current_user).html_safe %>
+  <% end %>
+</script>
 
 <script type="text/javascript">
   window.assets = {
