Add styles to group detail page

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,7 +1,12 @@
 $blue: #61D2D6;
 $light-blue: #B0E8EA;
 $light-gray: #EDE5E2;
+$lightest-gray: #f6f2f0;
 $orange: #FFAA00;
+$orange-background: rgba(255, 170, 0, 0.82);
+$yellow-background: rgba(255, 222, 0, 0.59);
+$blue-background: rgba(97, 210, 214, 0.66);
+$pink-background: rgba(234, 53, 86, 0.56);
 $white: #FFF;
 $pink: #ED146F;
 $gray: #bdb7b4;
