Login-Signup process changed to React-Modals - Created new group page

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -11,5 +11,6 @@ $white: #FFF;
 $pink: #ED146F;
 $gray: #bdb7b4;
 $dark-gray: #a5a09e;
+$darkest-gray: #63605e;
 $purple: #800080;
 $yellow: #EDDE45;
