--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -23,7 +23,7 @@
 }
 
 .header-list {
-
+  list-style: none;
   margin-top: 8px;
   display: flex;
   margin-right: 20px;
@@ -52,10 +52,45 @@
     text-decoration:none;
     font-weight:400;
   }
+}
 
-  :hover {
-    cursor: pointer;
+.header-buttons:hover {
+  cursor: pointer;
+  background-color: $dark-gray;
+  text-shadow:1px 1px 0px $lightest-gray;
+  box-shadow:0px 3px 0px $lightest-gray;
+}
+
+.create-button {
+  display: block;
+  position: relative;
+  margin-right: 20px;
+  width: 50px;
+  height: 50px;
+  background-color: $blue;
+  padding: 10px;
+  border-radius: 6px;
+  border: 0;
+  margin-bottom: 12px;
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  text-shadow:1px 1px 0px $light-blue;
+  box-shadow:0px 3px 0px $light-blue;
+  transition: all .3s ease-in-out;
+  color: $white;
+  a, a:visited {
+    color: $white;
+    text-decoration:none;
+    font-weight:400;
   }
+}
+
+.create-button:hover {
+  cursor: pointer;
+  background-color: $dark-gray;
+  text-shadow:1px 1px 0px $lightest-gray;
+  box-shadow:0px 3px 0px $lightest-gray;
 }
 
 .welcome-video {
