--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -12,6 +12,6 @@
 </script>
 
 <script src="https://use.fontawesome.com/f57d82efb9.js"></script>
-
+<script src="https://widget.cloudinary.com/global/all.js"></script>
 
 <main id="root"></main>
