--- a/app/assets/stylesheets/components/search.scss
+++ b/app/assets/stylesheets/components/search.scss
@@ -1,5 +1,5 @@
 .search-container {
-  width: 80%;
+  width: 100%;
   height: auto;
   top: 0px;
   background-color: $dark-gray;
@@ -12,8 +12,8 @@
   font-size: 16px;
   line-height: 1.3;
   display: flex;
-  justify-content: space-between;
-  padding: 20px 40px 20px 40px;
+  justify-content: space-around;
+  padding: 20px 0px 20px 0px;
 }
 .search-form {
   border-radius: 3px;
