Add some style to event detail page

--- a/app/assets/stylesheets/components/events.scss
+++ b/app/assets/stylesheets/components/events.scss
@@ -137,5 +137,26 @@
   margin-bottom:10px;
   color:$darkest-gray;
   text-shadow:1px 1px 0px white;
+}
+.event-detail-container {
+  display: flex;
+  flex-direction: column;
+}
+.event-detail-inner-container {
+  display: flex;
+  flex-direction: row;
+}
 
+.event-detail-event-name {
+  font-family: 'Raleway', sans-serif;
+  font-size:30px;
+  font-weight:600;
+  color:$darkest-gray;
+}
+.event-detail-event-datetime {
+  margin: 20px 20px 0px 20px;
+  font-family: 'Raleway', sans-serif;
+  font-size:20px;
+  font-weight:400;
+  color:$darkest-gray;
 }
