--- a/app/assets/stylesheets/components/groups.scss
+++ b/app/assets/stylesheets/components/groups.scss
@@ -173,6 +173,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   font-weight: 300;
   color: $dark-gray;
   margin: 5px;
@@ -256,11 +257,6 @@
   text-shadow:1px 1px 0px #b0e8ea;
   box-shadow:0px 3px 0px #b0e8ea;
   transition: all .3s ease-in-out;
-  // a, a:visited {
-  //   text-decoration:none;
-  //   font-weight:400;
-  //   transition: all .3s ease-in-out;
-  // }
 }
 
 
@@ -269,4 +265,24 @@
   background-color: $dark-gray;
   text-shadow:1px 1px 0px $lightest-gray;
   box-shadow:0px 3px 0px $lightest-gray;
+}
+
+.group-join-buttons {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: auto;
+  background-color: $dark-gray;
+  padding: 10px;
+  border-radius: 6px;
+  border: 0;
+  font-size: 16px;
+  font-weight: 400;
+  transition: all .3s ease-in-out;
+  color: $white;
+  a, a:visited {
+    color: $white;
+    text-decoration:none;
+    font-weight:400;
+  }
 }
