--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,4 +14,9 @@
 <script src="https://use.fontawesome.com/f57d82efb9.js"></script>
 <script src="https://widget.cloudinary.com/global/all.js"></script>
 
+
 <main id="root"></main>
+
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaygxrYf8wtpoLyo3s7sEXA4kK-YGW9jI&callback=initMap">
+</script>
