--- a/app/assets/stylesheets/css_reset.scss
+++ b/app/assets/stylesheets/css_reset.scss
@@ -8,5 +8,5 @@ html, body, section, div, li, form {
   text-decoration: inherit;
   color: inherit;
 
-  background: inherit;
+  background: none;
 }
