--- a/app/assets/stylesheets/components/groups.scss
+++ b/app/assets/stylesheets/components/groups.scss
@@ -3,21 +3,26 @@
   justify-content: space-around;
   flex-wrap: wrap;
   margin: auto;
+  margin-top: 20px;
   width: 90%;
 }
 
 .group-item {
-  height: 200px;
-  width: 300px;
+  height: 250px;
+  width: 350px;
   list-style: none;
-  margin: 20px;
+  margin: 10px;
 
   h3 {
+
     position: relative;
     top: 50px;
     left: 30px;
     color: $white;
-
+    margin: 20px;
+    font-size: 30px;
+    font-family: 'Raleway', sans-serif;
+    text-shadow: 2px 2px 2px #000;
     filter: none;
     text-decoration: none;;
   }
