--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>Scientup</title>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js" charset="utf-8"></script> -->
   <%= stylesheet_link_tag    'application', media: 'all' %>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaygxrYf8wtpoLyo3s7sEXA4kK-YGW9jI"></script>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <link href="https://fonts.googleapis.com/css?family=Passion+One|Raleway" rel="stylesheet">
@@ -10,6 +12,7 @@
 <body>
 
 <%= yield %>
+
 
 </body>
 </html>
