--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -103,6 +103,34 @@
   box-shadow:0px 3px 0px $lightest-gray;
 }
 
+.dropdown {
+  position: absolute;
+  width: 100px;
+  border-radius: 5px;
+  position: absolute;
+  left: -58px;
+
+  top: 55px;
+  background: $gray;
+  list-style: none;
+  li {
+    color: $white;
+    padding: 10px;
+  }
+
+  li:hover {
+    background-color: $dark-gray;
+  }
+}
+
+.invisible {
+  display: none;
+}
+
+.visible {
+  display: block;
+}
+
 .create-button {
   display: block;
   position: relative;
