--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,6 +8,7 @@
 <script type="text/javascript">
   window.assets = {
     logo: "<%= image_path("logo.png") %>",
+    favicon: "<%= image_path("favicon.png") %>"
   }
 </script>
 
