--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -13,7 +13,7 @@
   justify-content:center;
   float: left;
   height: 60px;
-  margin-top: 10px;
+  margin-top: auto;
   margin-left: 20px;
 }
 
@@ -62,6 +62,10 @@
   }
 }
 
+.margin-auto {
+  margin: auto;
+}
+
 .header-list {
   list-style: none;
   margin-top: 8px;
@@ -81,11 +85,11 @@
   width: auto;
   height: 50px;
   background-color: $blue;
-  padding: 15px;
+  padding: 5px 15px 5px 15px;
   border-radius: 6px;
   border: 0;
-  margin-bottom: 12px;
-  margin-top: 10px;
+
+  margin-top: auto;
   font-size: 16px;
   font-weight: 400;
   text-shadow:1px 1px 0px $light-blue;
@@ -108,6 +112,7 @@
   border-radius: 5px;
   position: absolute;
   left: -58px;
+  z-index: 110;
 
   top: 55px;
   background: $gray;
@@ -119,6 +124,7 @@
 
   li:hover {
     background-color: $dark-gray;
+    border-radius: 5px;
   }
 }
 
