--- a/app/assets/stylesheets/components/groups.scss
+++ b/app/assets/stylesheets/components/groups.scss
@@ -283,6 +283,7 @@
   display: flex;
   justify-content: space-between;
   position: relative;
+  margin: 5px;
   width: auto;
   background-color: $dark-gray;
   padding: 10px;
