--- a/app/assets/stylesheets/components/maps.scss
+++ b/app/assets/stylesheets/components/maps.scss
@@ -1,42 +1,15 @@
 .map {
   margin-top: 20px;
   margin-bottom: 20px;
-  border-radius: 6px;
-  width: 95%;
-  height: 400px;
+  width: 100%;
+  height: 30%;
 }
 
 #locationField {
   position: relative;
   width: 100%;
 }
-// #autocomplete {
-//
-// }
-// .label {
-//   text-align: right;
-//   font-weight: bold;
-//   width: 100px;
-//   color: #303030;
-// }
-// #address {
-//   border: 1px solid #000090;
-//   background-color: #f0f0ff;
-//   width: 480px;
-//   padding-right: 2px;
-// }
-// #address td {
-//   font-size: 10pt;
-// }
-// .field {
-//   width: 99%;
-// }
-// .slimField {
-//   width: 80px;
-// }
-// .wideField {
-//   width: 200px;
-// }
+
 #locationField {
   height: 20px;
   margin-bottom: 2px;
@@ -44,9 +17,10 @@
 
 .map-on-events-index {
   width: 40%;
-  height: 20px;
-  position: fixed;
-  right: 10px;
-  // bottom: 0px;
-  margin-bottom: 10px;
+  // right: 10px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  // position: fixed;
+  // z-index: -100;
+  // bottom: 1px;
 }
