--- a/app/assets/stylesheets/components/maps.scss
+++ b/app/assets/stylesheets/components/maps.scss
@@ -1,8 +1,9 @@
 .map {
   margin-top: 20px;
   margin-bottom: 20px;
-  width: 100%;
-  height: 30%;
+  margin-left: 20px;
+  width: 90%;
+  height: 300px;
 }
 
 #locationField {
@@ -17,10 +18,8 @@
 
 .map-on-events-index {
   width: 40%;
-  // right: 10px;
+  right: 10px;
   margin-top: 50px;
   margin-bottom: 50px;
-  // position: fixed;
-  // z-index: -100;
-  // bottom: 1px;
+  bottom: 1px;
 }
