--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -5,14 +5,16 @@
 }
 
 .footer-container {
+  position: relative;
+  top: 0;
+  bottom: 0;
   height: 90px;
+  width: 100%;
   font-size: 50px;
   background-color: $light-gray;
   font-family: serif;
-  margin-top: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-
 }
