--- a/app/assets/stylesheets/components/groups.scss
+++ b/app/assets/stylesheets/components/groups.scss
@@ -38,6 +38,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  margin-bottom: 30px;
 }
 .group-header {
   width: 90%;
