--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -25,11 +25,8 @@
 .welcome-video {
   width: 100%;
   height: auto;
-  margin-top: 90px;
-  position: absolute;
-  top: 0;
+  position: relative;
   right: 0;
-  bottom: 0;
   left: 0;
   overflow: hidden;
   z-index: -100;
@@ -37,8 +34,9 @@
 
 .welcome {
   position: absolute;
+  top: 100px;
+  z-index: 0;
   margin-top: 50px;
-
   width: 100%;
   align-items: center;
 
@@ -47,15 +45,11 @@
   display: flex;
   flex-direction: column;
   h1 {
-
-    z-index: 0;
     display: block;
-
     font-family:  'Passion One', cursive;
     font-size: 80px;
   }
   h3 {
-    z-index: 0;
     font-size: 30px;
     display: block;
     font-family: 'Raleway', sans-serif;
@@ -178,6 +172,7 @@
 }
 
 .home-components {
+  margin-bottom: 30px;
 }
 
 .home-background {
