--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,7 +14,7 @@
 
 <script src="https://use.fontawesome.com/f57d82efb9.js"></script>
 <script src="https://widget.cloudinary.com/global/all.js"></script>
-<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+<script src="https://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
 
 
 <main id="root"></main>
