Added default background image for groups

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Passion+One|Raleway" rel="stylesheet">
   <link rel="icon"
   type="image/png"
-  href="<%= image_path("favicon.png") %>"
+  href="<%= image_path("favicon.png") %>">
 </head>
 <body>
 
