--- a/app/assets/stylesheets/components/groups.scss
+++ b/app/assets/stylesheets/components/groups.scss
@@ -26,6 +26,18 @@
     filter: none;
     text-decoration: none;;
   }
+  h4 {
+    position: relative;
+    top: 30px;
+    left: 30px;
+    color: $white;
+    margin: 20px;
+    font-size: 15px;
+    font-family: 'Raleway', sans-serif;
+    text-shadow: 2px 2px 2px #000;
+    filter: none;
+    text-decoration: none;;
+  }
 
 }
 
