Removed location hover effect

--- a/app/assets/stylesheets/components/groups.scss
+++ b/app/assets/stylesheets/components/groups.scss
@@ -175,11 +175,16 @@
   margin-bottom: 0;
 }
 
-.group-city-name:hover {
-  cursor: pointer;
-  text-decoration: underline;
-  font-weight: 500;
-}
+// .group-city-name:hover {
+//   cursor: pointer;
+//   text-decoration: underline;
+//   font-weight: 500;
+// }
+// .group-city-name:hover {
+//   cursor: pointer;
+//   text-decoration: underline;
+//   font-weight: 500;
+// }
 
 .created-at {
   color: $dark-gray;
