--- a/app/assets/stylesheets/components/welcome.scss
+++ b/app/assets/stylesheets/components/welcome.scss
@@ -23,6 +23,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 .flex-column:nth-of-type(2n+1) {
   background-color: $light-gray;
